Bug 405040 - "Alternatives..." menu-item give wrong impression that I can install an alternative of the clicked task
Summary: "Alternatives..." menu-item give wrong impression that I can install an alter...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Task Manager and Icons-Only Task Manager widgets (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-03-03 17:26 UTC by Lionel Chauvin
Modified: 2019-03-13 20:54 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.16
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lionel Chauvin 2019-03-03 17:26:49 UTC
This patch https://phabricator.kde.org/D19472 added a new "Alternatives .." item that provides a way to install an alternative of task manager.

This feature is cool but is misleading because it gives the impression I can install an alternative of the clicked task (for instance Konsole).

In order to remove this ambiguity I propose to create a submenu "Task manager >" with "Configure ..." and "Alternatives ..." items.
Comment 1 Nate Graham 2019-03-13 20:54:36 UTC
Git commit 1daf42d9d734f969c31016825d8a7a93a6f95fbb by Nate Graham.
Committed on 13/03/2019 at 20:54.
Pushed by ngraham into branch 'master'.

[Task Manager] Reorganize and improve presentation of context menu

Summary:
This patch improves the UX of the Task Manager's context menu by offering more
logical separation and grouping of elements, improving strings, and adding or changing
icons, as appropriate. The result hopefully feels more harmonious, less confusing, and
less intimidating.
Related: bug 405071, bug 405070, bug 405065
FIXED-IN: 5.16

Test Plan:
"Window Actions" sub-menu: {F6688726}

With places: {F6688732}

With just actions: {F6688733}

With many actions: {F6688743}

With virtual desktops and activities: {F6688748}

Reviewers: #plasma, #vdg, ndavis, hein

Reviewed By: #plasma, #vdg, ndavis, hein

Subscribers: abetts, broulik, ndavis, trickyricky26, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D19606

M  +189  -170  applets/taskmanager/package/contents/ui/ContextMenu.qml
M  +1    -0    applets/taskmanager/plugin/backend.cpp

https://commits.kde.org/plasma-desktop/1daf42d9d734f969c31016825d8a7a93a6f95fbb