[Task Manager] Reorganize and improve presentation of context menu

Summary:
This patch improves the UX of the Task Manager's context menu by offering more
logical separation and grouping of elements, improving strings, and adding or changing
icons, as appropriate. The result hopefully feels more harmonious, less confusing, and
less intimidating.

BUG: 405040
BUG: 405071
BUG: 405070
BUG: 405065
FIXED-IN: 5.16

Test Plan:
"Window Actions" sub-menu: {F6688726}

With places: {F6688732}

With just actions: {F6688733}

With many actions: {F6688743}

With virtual desktops and activities: {F6688748}

Reviewers: #plasma, #vdg, ndavis, hein

Reviewed By: #plasma, #vdg, ndavis, hein

Subscribers: abetts, broulik, ndavis, trickyricky26, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D19606